--- a/bower.json
+++ b/bower.json
@@ -1,12 +1,13 @@
 {
-  "name": "ng.cl.api",
+  "name": "ng.cork.api",
   "version": "0.0.1",
-  "description": "AngularJS services and classes for building complex api/model layers.",
+  "description": "AngularJS services and classes for building complex API clients.",
   "authors": [
     "Cork Labs <contact@cork-labs.org> (http://cork-labs.org)"
   ],
   "license": "MIT",
-  "homepage": "https://github.com/cork-labs/ng.cl.api",
+  "homepage": "https://github.com/cork-labs/ng.cork.api",
+  "main": "dist/ng.cork.api.min.js",
   "ignore": [
     "bin",
     "docs",
@@ -26,10 +27,11 @@
   ],
   "repository": {
     "type": "git",
-    "url": "git@github.com:cork-labs/ng.cl.api.git"
+    "url": "git@github.com:cork-labs/ng.cork.api.git"
   },
   "dependencies": {
-    "angular": "~1.3.8"
+    "angular": "~1.3.8",
+    "ng.cork.util": "~0.0.3"
   },
   "devDependencies": {
     "angular-mocks": "~1.3.8"
